# claude-md-best-practices-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASE-NOTES-v1.0.md  RELEASE-NOTES-v2.0.md  RELEASE-NOTES-v3.0.md  RELEASE-NOTES-v3.1.md  RELEASE-NOTES-v3.2.md  pyproject.toml  setup.sh
.claude/: settings.json
.claude-plugin/: CLAUDE.md  PLUGIN_SCHEMA_NOTES.md  README.md  marketplace.json  plugin.json
.claude/agents/: catalog-inspector.md
.claude/rules/: claude-md-standards.md  development-workflow.md  testing.md
.claude/skills/add-source/: SKILL.md
.claude/skills/claude-md-best-practices-generator/: SKILL.md
.claude/skills/ignite/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/refactor-claude-md/: CLAUDE.md  SKILL.md
.claude/skills/refresh-guidelines/: CLAUDE.md  SKILL.md
.claude/skills/sync-catalog/: SKILL.md
.github/workflows/: ci.yml  freshness-check.yml
.reports/: codemap-diff.txt
catalog/: CLAUDE.md  sources.json
claude_md_best_practices.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: CLAUDE-MD-LIFECYCLE.md  CLAUDE-MD-SOTA.md  CLAUDE.md  DEV-AGENDA.md  IGNITER-DEV-AGENDA.md  IGNITER-PLAN.md  IGNITER-PLUS-CLAUDE-MD-SOTA-DEV-AGENDA.md  IGNITER-PLUS-CLAUDE-MD-SOTA-PLAN.md  PLAN.md  SOURCE-SCHEMA.md  plugin-plan.md  plugin-refactor-plan.md
docs/old/: CLAUDE-MD-SOTA-PLAN.md  IGNITER-PLAN.md
docs/test-archetypes/: RESULTS.md  empty-project.md  go-microservice.md  java-spring-boot.md  polyglot-python-ts.md  python-django.md  typescript-react-nextjs.md
rules/: claude-md-standards.md
skills/refactor-claude-md/: CLAUDE.md  SKILL.md
skills/refresh-guidelines/: SKILL.md
skills/scaffold-claude-md/: SKILL.md
tests/: CLAUDE.md  test_fetch_behavioral.py  test_insights_behavioral.py  test_metadata_consistency.py  test_refactor_scaffold_skills.py  test_sprint1_5_guidelines_enrichment.py  test_sprint1_catalog_foundation.py  test_sprint2_catalog_sync.py  test_sprint3_manifest_builder.py
tests/fixtures/: sample-report.html  sample-source.html
(+20 files in other folders)
